# internal/app/server.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/markgregr/RIP/docs"
+	"github.com/markgregr/RIP/internal/pkg/middleware"
 	swaggerFiles "github.com/swaggo/files"     // swagger embed files
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
 )
@@ -28,14 +29,14 @@ func (app *Application) Run() {
         BaggageGroup.DELETE("/:baggage_id/delete", app.Handler.DeleteBaggage) 
         BaggageGroup.POST("/create", app.Handler.CreateBaggage)
         BaggageGroup.PUT("/:baggage_id/update", app.Handler.UpdateBaggage) 
-        BaggageGroup.POST("/:baggage_id/delivery", app.Handler.AddBaggageToDelivery) 
-        BaggageGroup.DELETE("/:baggage_id/delivery/delete", app.Handler.RemoveBaggageFromDelivery)
-        BaggageGroup.POST("/:baggage_id/image",app.Handler.AddBaggageImage)
+        BaggageGroup.POST("/:baggage_id/delivery",app.Handler.AddBaggageToDelivery).Use(middleware.AuthenticateAndRefresh(app.Repository.GetRedisClient(), []byte("SuperSecretKey"), app.Repository))
+        BaggageGroup.DELETE("/:baggage_id/delivery/delete", app.Handler.RemoveBaggageFromDelivery).Use(middleware.AuthenticateAndRefresh(app.Repository.GetRedisClient(), []byte("SuperSecretKey"), app.Repository))
+        BaggageGroup.POST("/:baggage_id/image", app.Handler.AddBaggageImage)
     }
     
 
     // Группа запросов для доставки
-    DeliveryGroup := r.Group("/delivery")
+    DeliveryGroup := r.Group("/delivery").Use(middleware.AuthenticateAndRefresh(app.Repository.GetRedisClient(), []byte("AccessSecretKey"), app.Repository))
     {
         DeliveryGroup.GET("/", app.Handler.GetDeliveries)
         DeliveryGroup.GET("/:id", app.Handler.GetDeliveryByID)
@@ -45,6 +46,12 @@ func (app *Application) Run() {
         DeliveryGroup.PUT("/:id/status/moderator", app.Handler.UpdateDeliveryStatusModerator)  // Новый маршрут для обновления статуса доставки модератором
     }
 
+    UserGroup := r.Group("/user")
+    {
+        UserGroup.GET("/", app.Handler.GetUserByID)
+        UserGroup.POST("/register", app.Handler.Register)
+        UserGroup.POST("/login", app.Handler.Login)
+    }
     addr := fmt.Sprintf("%s:%d", app.Config.ServiceHost, app.Config.ServicePort)
     r.Run(addr)
     log.Println("Server down")
